--- a/Atlas/P97.CactusMaterialSupplier.Microservice.AtlasPhoenix/P97.CactusMaterialSupplier.Microservice.AtlasPhoenix.csproj
+++ b/Atlas/P97.CactusMaterialSupplier.Microservice.AtlasPhoenix/P97.CactusMaterialSupplier.Microservice.AtlasPhoenix.csproj
@@ -14,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\P97.Atlas.States.Phoenix.Adapters\P97.Atlas.States.Phoenix.Adapters.csproj" />
+    <ProjectReference Include="..\P97.Atlas.Federation.BaseAdapters\P97.Atlas.Federation.BaseAdapters.csproj" />
+    <ProjectReference Include="..\P97.CactusMaterialSupplier.AtlasPhoenix.Surface\P97.CactusMaterialSupplier.AtlasPhoenix.Surface.csproj" />
+    <ProjectReference Include="..\P97.CactusMaterialSupplier.AtlasPhoenix\P97.CactusMaterialSupplier.AtlasPhoenix.csproj" />
     <ProjectReference Include="..\P97.CactusMaterialSupplier.Surface\P97.CactusMaterialSupplier.Surface.csproj" />
     <ProjectReference Include="..\P97.CactusMaterialSupplier\P97.CactusMaterialSupplier.csproj" />
   </ItemGroup>
